[project]
name = "har2code"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lisoboss", email = "37949544+lisoboss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "requests",
]

[project.scripts]
har2code = "har2code.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B101"]
exclude_dirs = [".venv", "venv", "tests"]
